# factor-router

./: .env.example  ENVIRONMENTS.md  README.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  run.py  test.py  test_auth0_admin.py  test_gateway.py  test_openai_sdk.py  test_router_debug.py  txt
docs/: audio-no-factorrouter.md  router-modo-economico-NEGOCIO.md  router-modo-economico-TECNICO.md
migrations/: 001_gateway_apps.sql  006_app_spend_cap.sql  007_app_environment.sql  migrate.sh
scripts/: debug_prod_keys.py  test-factorai-model.py
src/api/: app.py  deps_auth0_admin.py
src/api/routes/: admin.py  health.py  proxy.py  turns.py  usage.py
src/gateway/: accumulator.py  auth.py  auth0_admin.py  bearer_schemes.py  config.py  context.py  key_store.py  model_policy.py  openai_message_content.py  provider_upstream.py  proxy.py  resilience.py
src/router/: classifier_prompt.py  models_config.dev.yaml  models_config.prod.yaml  models_config.yaml  router.py
src/usage/: service.py
test/: test_app_budget.py  test_audio_speech_proxy.py  test_low_credit_router.py  test_premium_router.py  test_proxy_stream_resilience.py  test_resilience.py  test_router_heuristic.py  test_tool_call_arguments.py  vllm_provider_test.py
